--- a/FlappyAnimal/templates/profile.html
+++ b/FlappyAnimal/templates/profile.html
@@ -1,1 +1,20 @@
+{% extends 'base.html' %}
 
+{% block content %}
+
+<nav class="navbarDark">
+    <p class="dlogin">WELCOME TO FLAPPYANIMAL</p>
+    <br>
+    <h2">Your Info</h2>
+    <p>
+      <strong>ID:</strong> {{ session['_id'] }}<br>
+      <strong>Name:</strong> {{ session['Username'] }}<br>
+      <strong>Email:</strong> {{ session['Email'] }}
+    </p>
+ </nav>
+  <form class="login_Form" action="/profile" method="POST">
+    <button type="submit" class="btn-submit">Update</button>
+    <button type="submit" class="btn-submit">Logout</button>
+  </form>
+  
+{% endblock %}
